# yamms

./: .gitignore  .pre-commit-config.yaml  GITHUB_ISSUES.md  LICENSE  MVP_ROADMAP.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
docs/: requirements.txt
docs/source/: arch.rst  conf.py  deployment.rst  development.rst  faq.rst  index.rst  sqlcipher_setup.rst  testing.rst  user_guide.rst
docs/source/api/: index.rst  modules.rst
scripts/: fix_rst_titles.py
tests/: __init__.py  test_config.py  test_main.py
yamms/: __init__.py  __main__.py  config.py  database.py  main.py
